# phoenix

./: .gitignore  CLAUDE.md  Cargo.toml  LICENSE  README.md  build.rs
.github/workflows/: ci.yml  release.yml
assets/: soundpacks.json
docs/: ANALYSIS.md  ARCHITECTURE.md  CLI_DESIGN.md  PLAN.md  REFACTOR.md
embedded/: game_config.toml  launcher_config.toml  migration_config.toml  release_config.toml  soundpacks.json  stable_hashes.toml  stable_releases.toml
src/: app.rs  app_data.rs  backup.rs  config.rs  db.rs  game.rs  github.rs  legacy.rs  main.rs  migration.rs  soundpack.rs  task.rs  update.rs  util.rs
src/cli/: mod.rs  output.rs  shell.rs
src/cli/commands/: backup.rs  config.rs  diag.rs  game.rs  mod.rs  soundpack.rs  update.rs
src/state/: backup.rs  mod.rs  releases.rs  soundpack.rs  ui.rs  update.rs
src/ui/: backups_tab.rs  components.rs  main_tab.rs  mod.rs  settings_tab.rs  soundpacks_tab.rs  theme.rs
src/update/: access.rs  download.rs  install.rs  mod.rs
