[package]
name = "phoenix"
version = "0.1.0"
edition = "2024"
description = "A fast, native game launcher for Cataclysm: Dark Days Ahead"
authors = ["Phoenix Contributors"]
license = "MIT"

[dependencies]
# GUI
eframe = "0.29"
egui = "0.29"
egui_commonmark = "0.18"

# Async runtime
tokio = { version = "1", features = ["full"] }
futures = "0.3"

# HTTP client
reqwest = { version = "0.12", features = ["json"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"

# Archives
zip = "2"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# File dialogs
rfd = "0.15"

# Database
rusqlite = { version = "0.32", features = ["bundled"] }

# Image loading (for window icon)
image = "0.25"

# Utilities
sha2 = "0.10"
directories = "5"
chrono = { version = "0.4", features = ["serde"] }
thiserror = "1"
anyhow = "1"
regex = "1"

# Windows-specific
[target.'cfg(windows)'.dependencies]
windows = { version = "0.58", features = [
    "Win32_Foundation",
    "Win32_UI_WindowsAndMessaging",
    "Win32_System_Threading",
] }

[profile.release]
lto = true
codegen-units = 1
strip = true
