[package]
name = "phoenix"
version = "0.6.0"
edition = "2024"
description = "A fast, native game launcher for Cataclysm: Dark Days Ahead"
authors = ["Phoenix Contributors"]
license = "MIT"

[dependencies]
# GUI
eframe = "0.33"
egui = "0.33"
egui_commonmark = "0.22"

# Async runtime
tokio = { version = "1", features = ["full"] }
futures = "0.3"

# HTTP client
reqwest = { version = "0.12", features = ["json", "stream"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"

# Archives (only ZIP supported for smaller binary and faster builds)
zip = "2"

# Browser
open = "5"

# Temp files
tempfile = "3"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# File dialogs
rfd = "0.15"

# Database
rusqlite = { version = "0.32", features = ["bundled"] }

# Image loading (for window icon - PNG only to reduce binary size)
image = { version = "0.25", default-features = false, features = ["png"] }

# Utilities
walkdir = "2"
sha2 = "0.10"
directories = "6"
chrono = { version = "0.4", features = ["serde"] }
thiserror = "2"
anyhow = "1"
regex = "1"
remove_dir_all = "1"

# Windows-specific
[target.'cfg(windows)'.dependencies]
windows = { version = "0.58", features = [
    "Win32_Foundation",
    "Win32_Security",
    "Win32_UI_WindowsAndMessaging",
    "Win32_System_Threading",
] }

[build-dependencies]
winres = "0.1"
image = { version = "0.25", default-features = false, features = ["png"] }

[dev-dependencies]

[profile.release]
lto = true
codegen-units = 1
strip = true
